--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,7 +94,6 @@ input#menu-hamburguesa:checked~ul {
 /*estilos de home */
 
 .home {
-    border: 1px solid black;
     display: grid;
     grid-template-rows: auto auto;
     grid-template-columns: 25% auto;
@@ -102,44 +101,27 @@ input#menu-hamburguesa:checked~ul {
     gap: 10px;
 }
 
+
+/*estilos del titulo*/
+
 .titulo {
     grid-area: titulo;
     grid-column: 1/3;
     font-size: 40px;
+    height: fit-content;
 }
+
+
+/*estilos del los iconos de las redes*/
 
 .iconos {
     grid-area: iconos;
-}
-
-.imagen {
-    grid-area: imagen;
-    width: fit-content;
-    height: fit-content;
-    grid-column-start: 2;
-    grid-row: 2;
-}
-
-@media screen and ( min-width:600px) {
-    .home {
-        grid-template-columns: 50% 50%;
-        grid-template-areas: "titulo iconos" "imagen";
-    }
-    .titulo {
-        grid-column: auto;
-    }
-    .imagen {
-        border: 1px solid black;
-        grid-row: 1/3;
-        grid-column: 2;
-    }
 }
 
 
 /*estilando los iconos de redes sociales*/
 
 .iconos {
-    border: 1px solid black;
     display: grid;
     margin-top: 0.5rem;
     grid-template-columns: auto;
@@ -157,6 +139,7 @@ input#menu-hamburguesa:checked~ul {
     display: grid;
     width: 50px;
     height: 50px;
+    border: 3px solid white;
 }
 
 .icon-in>img,
@@ -168,10 +151,27 @@ input#menu-hamburguesa:checked~ul {
 
 /*estilando imagen*/
 
+.imagen {
+    grid-area: imagen;
+    grid-column-start: 2;
+    grid-row: 2;
+    position: relative;
+    margin-left: -10%;
+}
+
+.imagen>.circulo-verde {
+    position: absolute;
+    margin: 18px 1% 5rem 18%;
+    width: 78%;
+    height: 68%;
+    border-radius: 50%;
+    background: #286f6c;
+}
+
 .imagen>img {
-    border: 1px solid black;
-    width: fit-content;
-    height: 300px;
+    width: 80%;
+    height: auto;
+    position: inherit;
 }
 
 
@@ -189,18 +189,48 @@ input#menu-hamburguesa:checked~ul {
 }
 */
 
+@media screen and ( min-width:600px) {
+    .home {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto;
+    }
+    .titulo {
+        grid-column: auto;
+        margin: 10%;
+        align-items: baseline;
+        width: min-content;
+    }
+    .iconos {
+        grid-template-columns: auto auto auto;
+        column-gap: 50%;
+        margin: -17% 8%;
+    }
+    .circulo-verde {
+        width: auto;
+        height: auto;
+    }
+    .imagen {
+        grid-row: 1/3;
+        grid-column: 2;
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        align-self: end;
+    }
+}
+
 
 /*seccion acerca-de-mi*/
 
 .acerca-de-mi {
     display: inline-block;
-    margin: 3rem 5% 1rem 5%;
+    padding: 3rem 5% 5rem 5%;
 }
 
 .acerca-de-mi>h2 {
     color: var(--principal-color);
     font: sans-serif bolder;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .acerca-de-mi>p {
@@ -210,9 +240,12 @@ input#menu-hamburguesa:checked~ul {
     color: var(--friendly-gray);
 }
 
-@media and screen(min-width: 600px) {
+@media screen and (min-width: 600px) {
+    .acerca-de-mi {
+        margin: 1% 10%;
+    }
     .acerca-de-mi>h2 {
-        font-size: 24px;
+        font-size: 40px;
     }
     .acerca-de-mi {
         font-size: 14px;
@@ -223,37 +256,382 @@ input#menu-hamburguesa:checked~ul {
 /*empieza la seccion de habilidades*/
 
 .habilidades {
-    border: 2px solid black;
-    padding-top: 5rem;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-top: 2%;
     padding-bottom: 1rem;
+    position: relative;
+}
+
+.habilidades>.circulote {
+    position: absolute;
+    margin: 1% auto 5% -43%;
+    width: 60%;
+    height: 62%;
+    border-radius: 50%;
+    background: var(--principal-color);
+}
+
+.circulote>.circulote-hijo {
+    position: absolute;
+    margin: 46% auto 5% 62%;
+    width: 39%;
+    height: 46%;
+    border-radius: 50%;
+    background: var(--enfacis-color);
 }
 
 .habilidades>h2 {
     color: var(--principal-color);
-    margin-top: 2rem;
+    margin-top: 3rem;
     margin-bottom: 1rem;
+    margin-left: 3rem;
+    font-size: 30px;
+    display: inline-block;
+    position: relative;
+}
+
+.habilidades>h2>span {
+    color: var(--pure-white);
 }
 
 .pizarra>ul {
-    border: 1ps solid black;
     list-style: none;
     display: grid;
     grid-template-columns: auto auto auto;
-    margin-left: 25%;
+    margin-left: 40%;
     gap: 1rem;
     overflow: scroll;
 }
 
-.pizarra>ul>li {
-    border: 1px solid black;
-    background-color: var(--principal-color);
-    font-size: 14px;
+.cards {
     width: 10rem;
+    height: 12rem;
+    background-color: var(--background-color);
 }
 
-.pizzarra>ul>li>p {
-    font-size: 10px;
-    padding: 2rem;
+.cards>.encabezado {
+    display: grid;
+    grid-template-columns: 20% auto;
+    grid-template-rows: auto;
+    padding: 1%;
+}
+
+.cards>.encabezado>h4 {
+    font-size: 14px;
+    text-align: left;
+    padding-top: 9%;
+}
+
+.cards>.encabezado>img {
+    width: 100%;
+    height: auto;
+}
+
+.cards>p {
+    font-size: 12px;
+    padding: 1%;
+    padding-top: 10%;
+    color: var(--friendly-gray);
+}
+
+@media screen and (min-width: 600px) {
+    .habilidades>.circulote {
+        height: 87%;
+        width: 46%;
+        margin: auto auto auto -33%;
+    }
+    .circulote>.circulote-hijo {
+        margin: 46% auto auto 56%;
+        width: 49%;
+        height: 53%;
+    }
+}
+
+.habilidades {
+    margin: auto auto auto 15%;
+}
+
+.habilidades>h2 {
+    margin-left: auto;
+    font-size: 40px;
+}
+
+.pizarra>ul {
+    margin: 2% 1% 2% 20%;
+}
+
+
+/*estilando seccion experiencia-->*/
+
+.experiencia {
+    margin-bottom: 8rem;
+}
+
+.experiencia>h2 {
+    font-size: 30px;
+    color: var(--principal-color);
+    margin: 1rem auto 1rem 5%;
+}
+
+.experiencias3 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    row-gap: 10%;
+}
+
+.experiencias3>li {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    gap: 5%;
+}
+
+.experiencias3>li>img {
+    height: 60%;
+    align-self: center;
+    margin: auto;
+}
+
+.experiencias3>li>p {
+    color: var(--friendly-gray);
+    font-size: small;
+    align-self: center;
+    margin: auto;
+}
+
+.experiencias3>li>span,
+.experiencias3>li>p>span {
+    color: black;
+    align-self: center;
+    font-weight: bold;
+    font-size: large;
+}
+
+@media screen and (min-width:600px) {
+    .experiencias3 {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto;
+        gap: 5%;
+        margin: auto 10%;
+    }
+    .experiencia>h2 {
+        margin-left: 10%;
+        font-size: 40px;
+        margin-top: 10%;
+    }
+}
+
+
+/*estilando la seccion portafolio*/
+
+.portafolio {
+    background-color: var(--principal-color);
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto;
+}
+
+.portafolio>.contenedor-imagen1 {
+    width: 28rem;
+    height: 20rem;
+    background-color: var(--pure-white);
+    border-radius: 5%;
+    margin: -13% 2% 0% 3%;
+    position: relative;
+    box-shadow: 4px -7px 13px var(--friendly-gray);
+}
+
+.portafolio>.contenedor-imagen {
+    width: 28rem;
+    height: 20rem;
+    background-color: var(--pure-white);
+    border-radius: 5%;
+    margin-left: 1rem;
+    margin-right: 2rem;
+    margin: 0 0 -32% 3%;
+    position: sticky;
+    box-shadow: 1px 11px 11px var(--friendly-gray);
+}
+
+.portafolio>.contenedor-imagen1>img,
+.portafolio>.contenedor-imagen>img {
+    width: 83%;
+    height: 83%;
+    margin: 11px 0 0 37px;
+}
+
+.portafolio>.contenedor-imagen1>h3,
+.portafolio>.contenedor-imagen>h3 {
+    margin: 3% 0 0 40px;
+    font-size: 1rem;
+}
+
+.portafolio>.img>img {
+    width: 50%;
+    height: 50%;
+    border: 3px solid darkblue;
+    align-self: center;
+    margin-left: 25%;
+}
+
+.portafolio>.informacion {
+    color: var(--pure-white);
+    margin: 59px 66px 46px 22px;
+}
+
+.portafolio>.informacion>h3 {
+    font-size: 30px;
+}
+
+.portafolio>.informacion>p {
+    margin-top: 4%;
+}
+
+
+/*estilando seccion contacto--> */
+
+.circulo-decor {
+    position: absolute;
+    margin: 10% auto 5% -13%;
+    width: 50%;
+    height: 41%;
+    border-radius: 50%;
+    opacity: 50%;
+    background: var(--principal-color);
+}
+
+.contacto {
+    margin-top: 15rem;
+}
+
+.contacto>h2 {
+    color: var(--principal-color);
+    font-size: 30px;
+    margin-left: 2rem;
+    margin-bottom: 10%;
+}
+
+.contacto_info {
+    padding: 1% 1% 10% 1%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    position: relative;
+}
+
+.telefono {
+    margin-left: 30%;
+}
+
+.email {
+    margin-left: 30%;
+}
+
+.icon-contacto {
+    background-color: var(--enfacis-color);
+    border-radius: 50%;
+    display: grid;
+    width: 80px;
+    height: 80px;
+    border: 1px solid var(--random-color);
+}
+
+.icon-contacto>img {
+    align-self: center;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.telefono>h5 {
+    color: var(--principal-color);
+    margin-left: 1%;
+    font-size: inherit;
+}
+
+.email>h5 {
+    color: var(--principal-color);
+    margin-left: 1%;
+    font-size: inherit;
+}
+
+.email>p {
+    color: var(--friendly-gray);
+    font-size: small;
+}
+
+.telefono>p {
+    color: var(--friendly-gray);
+    font-size: small;
+}
+
+@media screen and ( min-width:600px) {
+    .circulo-decor {
+        width: 45%;
+        height: 56%;
+        margin: 6% auto auto -16%;
+    }
+    .telefono {
+        margin-left: 61%;
+    }
+    .email {
+        margin-left: 25%;
+    }
+    .email>h5 {
+        margin: 5% auto auto 8%;
+    }
+    .telefono>h5 {
+        color: var(--principal-color);
+        margin: 12% auto auto -14%;
+        font-size: inherit;
+    }
+    .telefono>p {
+        margin: 2% 1% 1% 5%;
+    }
+    .email>p {
+        margin: 6px 0 0 -15px;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .portafolio {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
+    }
+    .portafolio>.contenedor-imagen {
+        grid-column-start: 2;
+        width: 18rem;
+        height: 14rem;
+        margin: -60px 0 -44px 29%;
+    }
+    .portafolio>.contenedor-imagen>img,
+    .portafolio>.contenedor-imagen>img {
+        margin: 10px 0 0 23px;
+    }
+    .portafolio>.contenedor-imagen>h3,
+    .portafolio>.contenedor-imagen1>h3 {
+        margin: 0px 0px -6px 22px;
+        font-size: 10px;
+    }
+    .portafolio>.informacion {
+        margin: 11% 14% 18% 15%;
+    }
+    .portafolio>.contenedor-imagen1 {
+        width: 19rem;
+        height: 14rem;
+    }
+}
+
+
+/*estilando footer*/
+
+footer>p {
+    color: var(--enfacis-color);
+    font-size: 14px;
+    margin: 11% 32%;
+}
+
+@media screen and ( min-width:600px) {
+    footer>p {
+        margin: 8% 39%;
+    }
 }
