--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,7 @@
 
 body {
     font-family: 'Inter', sans-serif;
+    max-width: 100%;
 }
 
 
@@ -50,7 +51,7 @@ nav {
     align-items: center;
     padding: 0.5rem 1.25rem;
     height: 60px;
-    color: var(--friendly-gray)
+    color: var(--friendly-gray);
 }
 
 input#menu-hamburguesa {
@@ -70,6 +71,7 @@ input#menu-hamburguesa~ul {
     gap: 2rem;
     padding: 2rem 1rem;
     display: none;
+    z-index: 1;
 }
 
 input#menu-hamburguesa:checked~ul {
@@ -86,7 +88,6 @@ input#menu-hamburguesa:checked~ul {
         display: flex;
         flex-direction: row;
         height: auto;
-        justify-content: flex-end;
     }
 }
 
@@ -125,7 +126,7 @@ input#menu-hamburguesa:checked~ul {
     display: grid;
     margin-top: 0.5rem;
     grid-template-columns: auto;
-    width: fit-content;
+    width: 100%;
     margin-left: 15%;
     padding: 0 0 2rem 0;
     gap: 2rem;
@@ -157,6 +158,7 @@ input#menu-hamburguesa:checked~ul {
     grid-row: 2;
     position: relative;
     margin-left: -10%;
+    max-width: 100%;
 }
 
 .imagen>.circulo-verde {
@@ -165,7 +167,7 @@ input#menu-hamburguesa:checked~ul {
     width: 78%;
     height: 68%;
     border-radius: 50%;
-    background: #286f6c;
+    background: var(--principal-color);
 }
 
 .imagen>img {
@@ -173,21 +175,6 @@ input#menu-hamburguesa:checked~ul {
     height: auto;
     position: inherit;
 }
-
-
-/*
-.mosaico {
-    position: relative;
-    border: 1px solid black;
-    margin: 0 2rem 15% 2rem;
-    width: 100px;
-    height: 100px;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    background: #5cb85c;
-}
-*/
 
 @media screen and ( min-width:600px) {
     .home {
@@ -202,7 +189,7 @@ input#menu-hamburguesa:checked~ul {
     }
     .iconos {
         grid-template-columns: auto auto auto;
-        column-gap: 50%;
+        column-gap: 25%;
         margin: -17% 8%;
     }
     .circulo-verde {
@@ -440,15 +427,15 @@ input#menu-hamburguesa:checked~ul {
     margin: -13% 2% 0% 3%;
     position: relative;
     box-shadow: 4px -7px 13px var(--friendly-gray);
+    max-width: 100%;
 }
 
 .portafolio>.contenedor-imagen {
+    max-width: 100%;
     width: 28rem;
     height: 20rem;
     background-color: var(--pure-white);
     border-radius: 5%;
-    margin-left: 1rem;
-    margin-right: 2rem;
     margin: 0 0 -32% 3%;
     position: sticky;
     box-shadow: 1px 11px 11px var(--friendly-gray);
@@ -456,6 +443,7 @@ input#menu-hamburguesa:checked~ul {
 
 .portafolio>.contenedor-imagen1>img,
 .portafolio>.contenedor-imagen>img {
+    max-width: 100%;
     width: 83%;
     height: 83%;
     margin: 11px 0 0 37px;
@@ -465,14 +453,6 @@ input#menu-hamburguesa:checked~ul {
 .portafolio>.contenedor-imagen>h3 {
     margin: 3% 0 0 40px;
     font-size: 1rem;
-}
-
-.portafolio>.img>img {
-    width: 50%;
-    height: 50%;
-    border: 3px solid darkblue;
-    align-self: center;
-    margin-left: 25%;
 }
 
 .portafolio>.informacion {
@@ -540,6 +520,7 @@ input#menu-hamburguesa:checked~ul {
     align-self: center;
     margin-left: 25%;
     margin-right: 25%;
+    max-width: 100%;
 }
 
 .telefono>h5 {
@@ -555,12 +536,12 @@ input#menu-hamburguesa:checked~ul {
 }
 
 .email>p {
-    color: var(--friendly-gray);
+    color: var(--principal-color);
     font-size: small;
 }
 
 .telefono>p {
-    color: var(--friendly-gray);
+    color: var(--principal-color);
     font-size: small;
 }
 
