--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,7 @@ nav {
 nav>ul>li>a {
     text-decoration: none;
     color: var(--friendly-gray);
+    font-size: 20px;
 }
 
 nav>ul>li>a:hover {
@@ -87,7 +88,6 @@ input#menu-hamburguesa~ul {
 .nav-list>li>a:hover {
     color: #286f6c;
 }
-
 
 
 input#menu-hamburguesa:checked~ul {
@@ -158,15 +158,23 @@ input#menu-hamburguesa:checked~ul {
     background-color: var(--enfacis-color);
     border-radius: 50%;
     display: grid;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border: 3px solid white;
 }
 
-.icon-in>img,
-.icon-ins>img,
+.icon-in>img {
+    margin: 0px 0px 0 16px;
+}
+
+.icon-ins>img {
+    width: 29px;
+    margin: 13px 0px 0px 12px;
+}
+
 .icon-twtr>img {
-    margin: auto;
+    margin: 11px 0px 0 12px;
+    width: 30px;
 }
 
 
@@ -183,15 +191,15 @@ input#menu-hamburguesa:checked~ul {
 
 .imagen>.circulo-verde {
     position: absolute;
-    margin: 18px 1% 5rem 18%;
-    width: 78%;
-    height: 68%;
+    margin: 78px 0% 6rem 20%;
+    width: 75%;
+    height: 73%;
     border-radius: 50%;
     background: var(--principal-color);
 }
 
 .imagen>img {
-    width: 80%;
+    width: 100%;
     height: auto;
     position: inherit;
 }
@@ -342,7 +350,7 @@ input#menu-hamburguesa:checked~ul {
 
 .cards>p {
     font-size: 12px;
-    padding: 1%;
+    padding: 8%;
     padding-top: 10%;
     color: var(--friendly-gray);
 }
@@ -369,6 +377,19 @@ input#menu-hamburguesa:checked~ul {
         margin: auto auto auto -41%;
     }
 
+}
+
+@media screen and (min-width: 1000px) {
+    .habilidades>.circulote {
+        height: 112%;
+        width: 49%;
+        margin: auto auto auto -36%;
+    }
+
+    .habilidades>h2 {
+        margin-left: -32px;
+        font-size: 51px;
+    }
 }
 
 .habilidades {
@@ -411,10 +432,19 @@ input#menu-hamburguesa:checked~ul {
     gap: 5%;
 }
 
-.experiencias3>li>img {
-    height: 60%;
+.experiencias3>li>a>img {
+    height: 24%;
     align-self: center;
-    margin: auto;
+    margin: 12px 0 0px 99px;
+}
+
+@media screen and (min-width: 600px) {
+    .experiencias3>li>a>img {
+        height: 25%;
+        align-self: center;
+        margin: auto;
+    }
+
 }
 
 .experiencias3>li>p {
@@ -458,34 +488,33 @@ input#menu-hamburguesa:checked~ul {
     grid-template-columns: auto;
 }
 
-.portafolio>.contenedor-imagen1 {
+.contenedor-imagen1 {
     width: 28rem;
-    height: 27rem;
+    height: 20rem;
     background-color: var(--pure-white);
     border-radius: 5%;
-    margin: -13% 2% 0% 3%;
+    margin: -6% 2% 0% 3%;
     position: relative;
     box-shadow: 4px -7px 13px var(--friendly-gray);
     max-width: 100%;
 }
 
-.portafolio>.contenedor-imagen {
+.contenedor-imagen>a {
     max-width: 100%;
     width: 28rem;
     height: 20rem;
     background-color: var(--pure-white);
-    border-radius: 5%;
-    margin: 0 0 -32% 3%;
+    margin: 0 0 -32% -3%;
     position: sticky;
     box-shadow: 1px 11px 11px var(--friendly-gray);
 }
 
-.portafolio>.contenedor-imagen1>img,
-.portafolio>.contenedor-imagen>img {
+.portafolio>.contenedor-imagen1>a>img,
+.portafolio>.contenedor-imagen>a>img {
     max-width: 100%;
-    width: 83%;
-    height: 83%;
-    margin: 11px 0 0 36px;
+    width: 81%;
+    height: 100%;
+    margin: 78px 0 0 30px;
 }
 
 .portafolio>.contenedor-imagen1>h3,
@@ -514,7 +543,7 @@ input#menu-hamburguesa:checked~ul {
     position: absolute;
     margin: 10% auto 5% -13%;
     width: 57%;
-    height: 53%;
+    height: 40%;
     border-radius: 50%;
     opacity: 50%;
     background: var(--principal-color);
@@ -615,11 +644,26 @@ input#menu-hamburguesa:checked~ul {
     }
 
     .telefono>p {
-        margin: 2% 1% 1% 5%;
+        margin: 2% 1% 1% -10%;
     }
 
     .email>p {
         margin: 6px 0 0 -15px;
+    }
+}
+
+@media screen and (min-width:900px) {
+    .circulo-decor {
+        width: 46%;
+        height: 60%;
+        margin: 6% auto auto 0%;
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
+    .circulo-decor {
+        height: 67%;
     }
 }
 
@@ -653,7 +697,7 @@ input#menu-hamburguesa:checked~ul {
 
     .portafolio>.contenedor-imagen1 {
         width: 19rem;
-        height: 14rem;
+        height: 20rem;
     }
 }
 
